Add JWT authentication for API security
Introduce `AppUserPrincipal` to implement Spring Security's `UserDetails`.
Implement JWT token generation and validation with `JwtService` and `JwtServiceImpl`.
Add `JwtFilter` to process JWT tokens from request cookies and manage the security context.
Include `JwtConfigProperties` for externalized JWT configuration.
Move and introduce custom exceptions for better error handling.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
     show-sql: true
 
 
+jwt:
+  secret: ${JWT_SECRET} #Your JWT Secret
+  ttl: 300000 #5 minutes
+  cookie-name: jwtCookie
+
+
