Implement user registration and login
Add `AuthController` with `/register` and `/login` endpoints for user management. Introduce `AppUser` entity, DTOs, and mapper for handling user data. Develop `AppUserServiceImpl` to manage user registration (password hashing, persistence) and login (credential verification).

Integrate JWT for authentication, including `CookieUtils` for setting JWT in HTTP-only cookies. Set up Redis caching for `AppUserPrincipal` objects to improve the performance of JWT validation within the `JwtFilter`.

Add `spring-boot-starter-validation` dependency and use Jakarta Bean Validation for robust request body validation. Include custom exceptions for specific authentication failures such as `AppUserAlreadyExistsException` and `InvalidCredentialsException`.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,15 @@ spring:
 jwt:
   secret: ${JWT_SECRET} #Your JWT Secret
   ttl: 300000 #5 minutes
-  cookie-name: jwtCookie
+  cookie-name: JWT_TOKEN
+  cookie-max-age: 60 # 60 minutes
+  cookie-http-only: true
+  cookie-secure: false
+
+cache:
+  principal:
+    name: principalCache
+    ttl: 5
+
 
 
