Integrate JWT cookie management and refresh
- Implement setting and retrieving JWT tokens via secure, HTTP-only cookies.
- Add automatic JWT token refresh capability when a token is nearing expiration.
- Update `AuthController` to add JWT cookies to the `HttpServletResponse` on login and registration.
- Refactor `AppUserServiceImpl` to use `PasswordEncoder` for manual password verification.
- Adjust `AppUserLoginResponse` to hide the JWT token from the JSON response body.
- Update JWT and cache configuration properties.
- Change JPA DDL auto strategy from `create` to `update`.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -27,6 +27,7 @@ spring:
 jwt:
   secret: ${JWT_SECRET} #Your JWT Secret
   ttl: 300000 #5 minutes
+  refresh-before: 60000
   cookie-name: JWT_TOKEN
   cookie-max-age: 60 # 60 minutes
   cookie-http-only: true
@@ -36,7 +37,7 @@ jwt:
 cache:
   principal:
     name: principalCache
-    ttl: 5
+    ttl: 30
 
 
 
