Introduce user authentication and snippet CRUD
This commit implements the foundational user authentication and snippet management features:

-   **User Authentication**:
    -   Introduces the `AppUser` entity, `AppUserRole` enum, and related DTOs (`AppUserLoginRequest`, `AppUserRegisterRequest`, `AppUserLoginResponse`).
    -   Sets up `AppUserDetailsService`, `AppUserService` with `AppUserServiceImpl` for user registration and login.
    -   Adds `AppUserRepository` for data persistence.
    -   Implements `AuthController` for REST endpoints for user authentication.
-   **Security**:
    -   Configures Spring Security (`WebConfig`) with JWT token-based authentication, a custom `JwtFilter`, and `BCryptPasswordEncoder`.
    -   Adds `JwtService` for generating, validating, and refreshing JWT tokens.
    -   Includes `JwtConfigProperties` for JWT configuration and `CookieUtils` for JWT cookie management.
    -   Integrates Redis caching for `AppUserPrincipal` with `AppUserPrincipalCacheService`.
-   **Snippet Management**:
    -   Refactors the `Snippet` entity: changes `AppUser` import, adds `name`, `isDraft` fields, and uses `@ElementCollection` for sets.
    -   Adds `SnippetCrudController` for REST endpoints to create, update, delete, and retrieve snippets.
    -   Implements `SnippetCrudServiceImpl`, `SnippetRepository`, and `SnippetMapper` to handle business logic and data mapping.
    -   Introduces `SnippetCreationRequest`, `SnippetUpdateRequest`, and `SnippetResponse` DTOs.
-   **Exceptions**:
    -   Adds custom exceptions for snippet-related operations (`NoSuchSnippetException`, `SnippetPersistenceException`).
-   **Dependencies**:
    -   Updates `pom.xml` to replace `javaparser-symbol-solver-core` with `javaparser-core`.

--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.github.javaparser</groupId>
-            <artifactId>javaparser-symbol-solver-core</artifactId>
+            <artifactId>javaparser-core</artifactId>
             <version>3.27.1</version>
         </dependency>
 
