Add Java snippet parsing and metadata extraction
Introduce asynchronous Java code snippet parsing to extract structural metadata.
This enables richer searching capabilities for stored snippets.

Key changes include:
*   Implement `JavaSnippetParser` and associated visitors to parse code using JavaParser.
*   Extend `Snippet` entity with new fields for storing metadata (class names, annotations, fields, method return types, etc.).
*   Process snippet content asynchronously upon update, utilizing virtual threads (`@EnableAsync`, `spring.threads.virtual.enabled`).
*   Move `@Transactional` annotations from service interface to implementation methods.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   application:
     name: ASTronaut
 
+  threads:
+    virtual:
+      enabled: true
+
   data:
     redis:
       port: 6379
