Refactor user auth and add snippet AST parsing
Refactor user authentication flow to use dedicated DTOs, improving
separation of concerns and API consistency. This introduces
`AppUserPrincipalDto` for security contexts and `AppUserAuthResponse`
for authentication API responses.

Implement Abstract Syntax Tree (AST) parsing for Java code snippets.
This new feature introduces a `SnippetParser` service, capable of
extracting metadata from code, even incomplete fragments, and
stores it with the snippet. This lays the groundwork for advanced
snippet management and structural search.

Further enhancements include:
*   Introduce `SnippetLanguage` enum to categorize code.
*   Update `CookieUtils` to set JWT cookie path.
*   Adjust `application.yml` for JWT cookie path and TTL.
*   Add comprehensive unit tests for `SnippetCrudService` and `SnippetParser`.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,14 +13,14 @@ spring:
 
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/ASTronaut
+    url: jdbc:postgresql://localhost:5432/ASTronaut?currentSchema=public
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -30,12 +30,13 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET} #Your JWT Secret
-  ttl: 300000 #5 minutes
+  ttl: 3_000_000 #5 minutes
   refresh-before: 60000
   cookie-name: JWT_TOKEN
   cookie-max-age: 60 # 60 minutes
   cookie-http-only: true
   cookie-secure: false
+  cookie-path: /
 
 
 cache:
