Use enum for Snippet language and add preview projection
Refactor `Snippet` entity's `language` field to `SnippetLanguage` enum for improved type safety and restricted values.
Introduce `SnippetPreview` interface as a JPA projection to optimize snippet list views. This reduces data transfer by fetching only essential fields.
Update relevant services, controllers, mappers, and repositories to utilize the enum and projection.
Enable asynchronous processing for snippet content parsing.
Adjust application configuration for pageable serialization.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     redis:
       port: 6379
       host: localhost
+    web:
+      pageable:
+        serialization-mode: via_dto
 
 
   datasource:
