Remove Spring Data REST and add OpenAPI documentation
Remove the `spring-boot-starter-data-rest` dependency as it is not being used.

Integrate OpenAPI (Swagger) to provide API documentation for the application's endpoints.
This includes:
- Adding `ApiError` record for consistent error responses.
- Implementing `GlobalExceptionHandler` to centralize error handling and generate `ApiError` responses.
- Creating `NoSuchAppUserException` to replace `NoSuchUserException`.
- Adding Swagger annotations (`@Tag`, `@Operation`, `@ApiResponses`, `@ApiResponse`, `@Parameter`) to controllers (`AppUserController`, `AuthController`, `SnippetAnalyticsController`, `SnippetCrudController`) for detailed API descriptions.
- Configuring Swagger UI paths and making them accessible without authentication.
- Updating `JwtFilter` to exclude Swagger URLs from JWT authentication.
- Adding a logout endpoint in `AppUserController` and configuring Spring Security logout.
- Adding `@NonNull` annotations to method parameters for better nullability guarantees.
- Changing `HttpStatus.GONE` to `HttpStatus.NO_CONTENT` for delete operations.
- Updating `AppUserPrincipalCacheServiceImpl` and `AppUserQueryServiceImpl` to use `NoSuchAppUserException`.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,5 +50,12 @@ cache:
     name: principalCache
     ttl: 30
 
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
 
 
+server:
+  port: 80
