feat: Add rate limiting with Redis
Introduce a new `RateLimitFilter` to enforce API rate limits based on IP address, using Redis to store request counts.

This change includes:
- A `RateLimitException` to handle rate limit violations.
- A `RateLimitFilter` that intercepts requests, checks the client's IP against a Redis store, and throws `RateLimitException` if limits are exceeded.
- Configuration for `RedisTemplate` to serialize `String` keys and `Object` values using `StringRedisSerializer` and `GenericJackson2JsonRedisSerializer` respectively.
- Integration of the `RateLimitFilter` into the Spring Security filter chain, placing it before the `JwtFilter`.
- Updates to `WebConfig` to permit access to Swagger UI endpoints.
- A new `rate-limit.req-per-minute` property in `application.yml` to configure the requests per minute limit.
- Modified comment in `AppUserPrincipalCacheServiceImpl` for clarity.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,9 @@ cache:
     name: principalCache
     ttl: 30
 
+rate-limit:
+  req-per-minute: 30
+
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
