Enhance setup, docs, and user deletion logic
Refactor project documentation, implement soft deletion for users, and
improve the local development setup.

-   **Update project documentation:** Replace `API.md` with a comprehensive
    `README.md` covering architecture, database, authentication,
    rate limiting, search, diff comparison, error handling, and setup.
    Add a dedicated `setup.md` for local environment instructions.
-   **Implement user soft deletion:** Introduce an `isDeleted` flag for
    `AppUser` and update repository queries to filter active users.
    Add a unique constraint on `(email, isDeleted)` to allow re-registration
    after soft deletion.
-   **Add scheduled hard deletion:** Introduce `AppUserSoftDeleteScheduler` to
    periodically hard delete users marked as soft-deleted.
-   **Improve local development setup:** Provide a `compose.yaml` for
    easily spinning up PostgreSQL, Redis, and the application via Docker
    Compose.
-   **Introduce environment-specific configs:** Add `application-local.yml`
    and `application-prod.yaml` for distinct settings across environments.
-   **Adjust default snippet sorting:** Change default snippet sorting from
    `createdAt` to `updatedAt` for listing and filtering endpoints.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,35 @@
+version: '3.8'
+
 services:
-  redis:
-    image: redis:7.4.2
+  postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: astronaut_db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     ports:
-      - '6379:6379'
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+
+  app:
+    build: .
+    ports:
+      - "80:80"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/astronaut_db
+      SPRING_DATASOURCE_USERNAME: user
+      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
+    depends_on:
+      - postgres
+      - redis
+
+volumes:
+  postgres_data:
