--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -26,7 +26,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
@@ -36,7 +36,7 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET} #Your JWT Secret
-  ttl: 300_000_000 #5 minutes
+  ttl: 1_000_000_000 #11 DAYS
   refresh-before: 60000
   cookie-name: JWT_TOKEN
   cookie-max-age: 60 # 60 minutes
