Add user preferences API endpoint
Introduce `GET /users/preferences` endpoint to retrieve user-specific settings like fuzzy search toggle. This includes API documentation, controller, service, and mapper implementations.

Other changes in this commit:
- Externalize security and rate limit configurations into dedicated `SecurityConfigProperties` and `RateLimitConfigProperties`. This centralizes and improves configurability for excluded paths, logout behavior, password encoder strength, and rate limit parameters.
- Implement validation for `AppUserDeleteRequest` (password size/null) and `AppUserUpdateRequest` (trim username/email).
- Rename `AppUser.snippet` field to `snippets` for clarity.
- Adjust logging levels from `INFO` to `ERROR` for critical failures in user service (e.g., password update, deletion, email validation, cache eviction).
- Change `ddl-auto` from `create` to `update` in `application-local.yml` to prevent data loss on restarts.
- Mark several local variables as `final`.

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -26,7 +26,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -44,14 +44,17 @@ jwt:
   cookie-secure: false
   cookie-path: /
 
-
 cache:
   principal:
     name: principalCache
     ttl: 30
 
 rate-limit:
-  req-per-minute: 60
+  requests-per-minute: 500
+  default-key-expiration: 100 # In minutes
+  excluded-ips:
+    - "0:0:0:0:0:0:0:1"
+    - "127.0.0.1"
 
 springdoc:
   swagger-ui:
@@ -59,6 +62,31 @@ springdoc:
   api-docs:
     path: /v3/api-docs
 
-
 server:
   port: 80
+
+# Note that some of the excluded paths might feel redundant.
+# They're not because custom filters don't support wildcards
+security:
+  excluded-paths:
+    - "/"
+    - "/index.html"
+    - "/swagger-ui/**"
+    - "/v3/api-docs/**"
+    - "/api-docs"
+    - "/swagger-ui.html"
+    - "/css/header.css"
+    - "/js/header.js"
+    - "/css/toast.css"
+    - "/js/toast.js"
+    - "/auth.html"
+    - "/auth/register"
+    - "/auth/login"
+    - "/auth/**"
+    - "/swagger"
+    - "/v3/api-docs"
+  logout-url: "/users/logout"
+  redirect-url: "/"
+  clearAuth: true
+  encodingStrength: 12
+
