Refactor snippet parsing and enhance documentation
Move Java snippet parsing logic into a dedicated `SnippetParsingService`.
This service includes retry mechanisms for malformed code snippets by
wrapping content in a dummy class, and executes parsing asynchronously.

Improve overall project documentation by:
- Adding a new `SETUP.md` with detailed local setup instructions.
- Expanding the `README.md` to cover testing, frontend quirks, and
  detailed configuration for `application-local.yml`.
- Clarifying database schema descriptions.

Enhance data handling and performance:
- Add database indexes to `AppUser` email field and `Snippet` name and
  tags for faster lookups.
- Introduce `DtoUtils` to normalize (trim and lowercase) string-based
  input fields in DTOs, ensuring consistent data storage and search
  behavior.
- Update search specifications to leverage pre-normalized DTO input.
- Add unit tests for `SnippetParsingService`.

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -88,5 +88,5 @@ security:
   logout-url: "/users/logout"
   redirect-url: "/"
   clearAuth: true
-  encodingStrength: 12
+  encodingStrength: 12 # password encoding strength
 
