Configure app with dedicated YAML and port 9093
Introduce a comprehensive 'application.yml' file to centralize Spring Boot
configuration, including database, Redis, JWT, caching, rate limiting, and
security settings.

Standardize the application server port to 9093, updating 'compose.yaml'
and documentation ('README.md', 'SETUP.md') accordingly. This also
involves aligning PostgreSQL environment variables and Spring Data Redis
properties in 'compose.yaml' with the new configuration.

Clean up 'pom.xml' by removing unused dependencies like Spring Modulith
and Actuator to streamline the build process. Update documentation with
QuickStart instructions for easier Docker management and clarify JWT secret
source.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,9 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15
     environment:
-      POSTGRES_DB: astronaut_db
-      POSTGRES_USER: user
+      POSTGRES_DB: ASTronaut
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
@@ -20,13 +18,13 @@ services:
   app:
     build: .
     ports:
-      - "80:80"
+      - "9093:9093"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/astronaut_db
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
+        SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ASTronaut?currentSchema=public
+        SPRING_DATASOURCE_USERNAME: postgres
+        SPRING_DATASOURCE_PASSWORD: password
+        SPRING_DATA_REDIS_HOST: redis
+        SPRING_DATA_REDIS_PORT: 6379
     depends_on:
       - postgres
       - redis
