--- a/compose.yaml
+++ b/compose.yaml
@@ -16,7 +16,7 @@ services:
       - "6379:6379"
 
   app:
-    build: .
+    image: astronaut-app:latest
     ports:
       - "9093:9093"
     environment:
