--- a/compose.yaml
+++ b/compose.yaml
@@ -1,34 +1,34 @@
 services:
-  postgres:
-    image: postgres:15
-    environment:
-      POSTGRES_DB: ASTronaut
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+#  postgres:
+#    image: postgres:15
+#    environment:
+#      POSTGRES_DB: ASTronaut
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: password
+#    ports:
+#      - "5432:5432"
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
 
-  app:
-    build: .
-    image: astronaut-app:latest
-    ports:
-      - "9093:9093"
-    environment:
-        SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ASTronaut?currentSchema=public
-        SPRING_DATASOURCE_USERNAME: postgres
-        SPRING_DATASOURCE_PASSWORD: password
-        SPRING_DATA_REDIS_HOST: redis
-        SPRING_DATA_REDIS_PORT: 6379
-    depends_on:
-      - postgres
-      - redis
-
-volumes:
-  postgres_data:
+#  app:
+#    build: .
+#    image: astronaut-app:latest
+#    ports:
+#      - "9093:9093"
+#    environment:
+#        SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ASTronaut?currentSchema=public
+#        SPRING_DATASOURCE_USERNAME: postgres
+#        SPRING_DATASOURCE_PASSWORD: password
+#        SPRING_DATA_REDIS_HOST: redis
+#        SPRING_DATA_REDIS_PORT: 6379
+#    depends_on:
+#      - postgres
+#      - redis
+#
+#volumes:
+#  postgres_data:
