Simplify Docker setup and update documentation
Refactor local setup instructions to prioritize a simpler Docker-based approach using a pre-built image from Docker Hub.

- Update `SETUP.md` with detailed Docker setup instructions, including a sample `compose.yaml`.
- Integrate QuickStart instructions for persistent local access to ASTronaut.
- Add a security note in `README.md` regarding the default JWT secret.
- Update prerequisites to Java 21+ and clarify other dependencies.
- Provide a default JWT secret in `application.yml` for convenience in local environments.
- Make general documentation improvements and minor fixes across the README.

--- a/compose.yaml
+++ b/compose.yaml
@@ -16,8 +16,7 @@ services:
       - "6379:6379"
 
   app:
-    build: .
-    image: astronaut-app:latest
+    image: kushade/astronaut:latest
     ports:
       - "9093:9093"
     environment:
